se ajusta code smells